--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,10 +1,9 @@
 body {
-  background-color: #003366;
+  	background-color: #003366;
 }
 
 .jumbotron h1{
 	color: #0066ff;
-
 }
 
 .jumbotron{
@@ -12,11 +11,16 @@ body {
 	background-color:transparent !important;
 }
 
+.jumbotron p{
+	color: #fff;
+}
+
 img {
-margin-top: 3%;
-  width: 20%;
+	margin-top: 0%;
+  	width: 15%;
 }
 
 .submitFont{
 	color: #ebebe0;
+	font-size: 20px;
 }
