--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,13 +39,10 @@
 
         <!-- Input New Burgers Form -->
         <form action="burger/create" method="POST"> 
-          
-          <!-- Text Area Input -->
           <div class="row">
-            <!-- Empty Div to help center textarea -->
             <div class="col-md-3"></div> 
 
-            <!-- Burger Input Box -->
+            <!-- Burger Input -->
             <div class="form-group col-md-6">
               <center><label for="new_burger" class="submitFont">Want a new burger?</label></center>
               <textarea class="form-control" type="text" columns="6" rows="2" id="new_burger required value="" name="burger_name"></textarea>
@@ -53,8 +50,7 @@
            
             <div class="col-md-3"></div> 
           </div>
-        
-          <!-- Submit Button -->
+  
           <center>
             <button id="submit-button" type="submit" class="btn btn-danger">Create my Burger!</button>
           </center>
