--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
  <div class="row">
   <center>
-    <!-- Left side (Burgers Available) -->
+    <!--Burgers Available-->
     <div class="col-md-4">
       <h3 class="submitFont">Burgers Available</h3>
       <div id="burgersAvailable">
@@ -24,7 +24,7 @@
 
     <div class="col-md-4"></div> 
 
-    <!-- Right side (Burgers Devoured) -->
+    <!--Burgers Devoured-->
     <div class="col-md-4">
       <h3 class="submitFont">Burgers Devoured</h3>
       <div id="alreadyEaten">
